:monocle_face: determine sheephapmap countries with reverse geocoding

--- a/notebooks/exploratory/0.10.0-bunop-describe-ovine_SNP50.ipynb
+++ b/notebooks/exploratory/0.10.0-bunop-describe-ovine_SNP50.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "perfect-accuracy",
+   "id": "described-luxembourg",
    "metadata": {},
    "source": [
     "# ovine_SNP50HapMap_data\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "solar-printing",
+   "id": "instructional-joining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "former-bracket",
+   "id": "specified-broadway",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "color-switzerland",
+   "id": "isolated-happening",
    "metadata": {},
    "outputs": [
     {
@@ -50,24 +50,26 @@
      "output_type": "stream",
      "text": [
       "File Name                                             Modified             Size\n",
-      "ovine_SNP50HapMap_data/                        2021-03-16 10:23:24            0\n",
+      "ovine_SNP50HapMap_data/                        2021-04-26 13:54:44            0\n",
+      "ovine_SNP50HapMap_data/Heaton/                 2021-03-16 10:22:46            0\n",
+      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_DNAReport.csv 2009-05-29 16:03:10          759\n",
+      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_FinalReport.txt 2009-05-29 16:02:52     15440934\n",
+      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_LocusSummary.csv 2009-05-29 16:03:28      9801077\n",
+      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_LocusXDNA.csv 2009-05-29 16:03:46      6480220\n",
+      "ovine_SNP50HapMap_data/Heaton/SNP_Map.txt      2009-05-29 16:02:38      3053566\n",
+      "ovine_SNP50HapMap_data/Heaton/Sample_Map.txt   2009-05-29 16:02:34          429\n",
+      "ovine_SNP50HapMap_data/OaCoordinates2104.xlsx  2021-04-07 12:29:00        43221\n",
+      "ovine_SNP50HapMap_data/Parentage_04_may_09.PED 2009-06-04 08:27:40     19028003\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv1/          2021-03-16 10:23:08            0\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv1/SNP50_Breedv1.map 2009-05-22 01:34:48      1407804\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv1/SNP50_Breedv1.ped 2009-05-22 01:34:48    552991775\n",
       "ovine_SNP50HapMap_data/SNP50_Breedv2/          2021-03-16 10:23:16            0\n",
       "ovine_SNP50HapMap_data/SNP50_Breedv2/SNP50_Breedv2.map 2010-02-12 13:36:06      1610011\n",
       "ovine_SNP50HapMap_data/SNP50_Breedv2/SNP50_Breedv2.ped 2010-02-12 13:36:26     27070481\n",
       "ovine_SNP50HapMap_data/SNP50_Breedv2/ovine SNP50 Breedv2 data release.pdf 2010-02-12 13:21:02        46116\n",
-      "ovine_SNP50HapMap_data/Heaton/                 2021-03-16 10:22:46            0\n",
-      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_LocusSummary.csv 2009-05-29 16:03:28      9801077\n",
-      "ovine_SNP50HapMap_data/Heaton/Sample_Map.txt   2009-05-29 16:02:34          429\n",
-      "ovine_SNP50HapMap_data/Heaton/SNP_Map.txt      2009-05-29 16:02:38      3053566\n",
-      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_LocusXDNA.csv 2009-05-29 16:03:46      6480220\n",
-      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_DNAReport.csv 2009-05-29 16:03:10          759\n",
-      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_FinalReport.txt 2009-05-29 16:02:52     15440934\n",
-      "ovine_SNP50HapMap_data/SNP50_Breedv1/          2021-03-16 10:23:08            0\n",
-      "ovine_SNP50HapMap_data/SNP50_Breedv1/SNP50_Breedv1.ped 2009-05-22 01:34:48    552991775\n",
-      "ovine_SNP50HapMap_data/SNP50_Breedv1/SNP50_Breedv1.map 2009-05-22 01:34:48      1407804\n",
       "ovine_SNP50HapMap_data/ancestral_no_seg_gc08.out 2020-03-04 10:08:58      1919200\n",
-      "ovine_SNP50HapMap_data/ovine_SNP50HapMap_data.pdf 2020-03-04 10:08:10        58401\n",
-      "ovine_SNP50HapMap_data/Parentage_04_may_09.PED 2009-06-04 08:27:40     19028003\n"
+      "ovine_SNP50HapMap_data/kijas2012_dataset.xlsx  2021-04-26 13:53:18        12123\n",
+      "ovine_SNP50HapMap_data/ovine_SNP50HapMap_data.pdf 2020-03-04 10:08:10        58401\n"
      ]
     }
    ],
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "union-conditions",
+   "id": "invisible-twins",
    "metadata": {},
    "source": [
     "This dataset have many subarchive inside. Let's do a quick check"
@@ -87,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "infinite-easter",
+   "id": "short-supplement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "loose-letter",
+   "id": "becoming-lesson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rolled-blocking",
+   "id": "affecting-reservoir",
    "metadata": {},
    "source": [
     "Files are quite old. I suppose the are in the old 3.1 coordinates system"
@@ -120,12 +122,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "adopted-austria",
+   "id": "compressed-elements",
    "metadata": {},
    "outputs": [],
    "source": [
     "chip_dir = project_dir / \"data/external/SHE/ILLUMINA/\"\n",
-    "old_chip3_file = chip_dir / \"ovinesnp50_b.csv\"\n",
+    "old_chip3_file = chip_dir / \"ovinesnp50_b.csv.gz\"\n",
     "old_chip3 = dict()\n",
     "for record in src.features.illumina.read_snpChip(old_chip3_file):\n",
     "    old_chip3[record.name] = (record.chr, record.mapinfo)"
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "periodic-terrace",
+   "id": "objective-clarity",
    "metadata": {},
    "source": [
     "## Heaton"
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "educated-mexican",
+   "id": "israeli-motel",
    "metadata": {},
    "source": [
     "This dataset have no map/ped files. I have no information about breeds or country. I need to process the SNP_Map file"
@@ -150,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "identical-philadelphia",
+   "id": "alleged-mainstream",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unauthorized-publication",
+   "id": "ruled-shipping",
    "metadata": {},
    "source": [
     "Heaton coordinates are in outdated 3.1"
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mechanical-sweet",
+   "id": "welsh-brook",
    "metadata": {},
    "source": [
     "## Parentage_04_may_09"
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stretch-peter",
+   "id": "static-istanbul",
    "metadata": {},
    "source": [
     "This file seems to have only PED informations"
@@ -214,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "going-cookie",
+   "id": "three-session",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hairy-macedonia",
+   "id": "major-reply",
    "metadata": {},
    "source": [
     "I suppose that such data comes from 50K Illumina sheep, however I have no information on map (snp names and coordinates), so this dataset must be discarded"
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "isolated-asbestos",
+   "id": "mechanical-husband",
    "metadata": {},
    "source": [
     "## SNP50_Breedv1\n",
@@ -257,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "solved-union",
+   "id": "future-steel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "disciplinary-sleeve",
+   "id": "attached-marine",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "detected-provider",
+   "id": "southern-humidity",
    "metadata": {},
    "source": [
     "Those coordinates need to be checked"
@@ -324,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "painted-darwin",
+   "id": "authentic-crawford",
    "metadata": {},
    "source": [
     "## SNP50_Breedv2\n",
@@ -334,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "flexible-sheffield",
+   "id": "fossil-underwear",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "horizontal-pharmaceutical",
+   "id": "essential-shooting",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "celtic-chinese",
+   "id": "centered-thermal",
    "metadata": {},
    "source": [
     "Those coordinates need to be checked"
