--- a/notebooks/exploratory/0.3-bunop-sheep-coordinates-and-ensembl.ipynb
+++ b/notebooks/exploratory/0.3-bunop-sheep-coordinates-and-ensembl.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "new_chip3 = dict()\n",
-    "for record in src.features.illumina.read_snpChip(illumina_chip):\n",
+    "for record in src.features.illumina.read_Manifest(illumina_chip):\n",
     "    new_chip3[record.name] = (record.chr, record.mapinfo)"
    ]
   },
