--- a/notebooks/exploratory/0.4-bunop-goat-coordinates-and-ensembl.ipynb
+++ b/notebooks/exploratory/0.4-bunop-goat-coordinates-and-ensembl.ipynb
@@ -149,7 +149,7 @@
    ],
    "source": [
     "ars_chip = defaultdict(list)\n",
-    "for record in src.features.illumina.read_snpChip(illumina_chip, delimiter=','):\n",
+    "for record in src.features.illumina.read_Manifest(illumina_chip, delimiter=','):\n",
     "    ars_chip['name'].append(record.name)\n",
     "    ars_chip['chr'].append(record.chr)\n",
     "    ars_chip['position'].append(record.mapinfo)\n",
