--- a/notebooks/exploratory/0.20.0-bunop-uruguay_fg.ipynb
+++ b/notebooks/exploratory/0.20.0-bunop-uruguay_fg.ipynb
@@ -24,8 +24,8 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "from src.features.smarterdb import global_connection, Dataset, VariantSheep\n",
-    "from src.features.utils import sanitize, text_or_gzip_open\n",
-    "from src.features.affymetrix import skip_comments"
+    "from src.features.utils import sanitize, text_or_gzip_open, get_interim_dir\n",
+    "from src.features.affymetrix import read_affymetrixRow"
    ]
   },
   {
@@ -40,119 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc6d5ca2-647f-4a55-9e1b-94e1c32976b7",
-   "metadata": {},
-   "source": [
-    "Some accessory functions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "de5b62b5-4e1f-4f53-9b23-3a0ab6e0e49c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_duplicates(header):\n",
-    "    \"\"\"Find duplicate columns in header. Returns index to remove\"\"\"\n",
-    "    \n",
-    "    to_remove = []\n",
-    "    \n",
-    "    # count columns and find duplicates\n",
-    "    counts = collections.Counter(header)\n",
-    "    duplicated_cols = [key for key, value in counts.items() if value > 1]\n",
-    "    \n",
-    "    # now iterate and get duplicates indexes\n",
-    "    for duplicated in duplicated_cols:\n",
-    "        # get all duplicated index\n",
-    "        tmp = [i for i, col in enumerate(header) if col == duplicated]\n",
-    "        \n",
-    "        # track only from the 2nd occurrence\n",
-    "        to_remove += tmp[1:]\n",
-    "        \n",
-    "    return to_remove\n",
-    "\n",
-    "\n",
-    "def _search_in_header(header: list, term: str) -> list:\n",
-    "    return list(\n",
-    "        filter(\n",
-    "            lambda record: record.startswith(term),\n",
-    "            header\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def search_n_samples(header: list) -> int:\n",
-    "    records = _search_in_header(header, \"##samples-per-snp=\")\n",
-    "    n_samples = None\n",
-    "\n",
-    "    if records:\n",
-    "        n_samples = records[0].split(\"=\")[1]\n",
-    "        n_samples = int(n_samples)\n",
-    "\n",
-    "    return n_samples\n",
-    "\n",
-    "\n",
-    "def search_n_snp(header: list) -> int:\n",
-    "    records = _search_in_header(header, \"##snp-count=\")\n",
-    "    n_snp = None\n",
-    "\n",
-    "    if records:\n",
-    "        n_snp = records[0].split(\"=\")[1]\n",
-    "        n_snp = int(n_snp)\n",
-    "\n",
-    "    return n_snp\n",
-    "\n",
-    "\n",
-    "def read_affymetrixRow(path: Path, delimiter=\"\\t\"):\n",
-    "    with text_or_gzip_open(path) as handle:\n",
-    "        position, skipped = skip_comments(handle)\n",
-    "\n",
-    "        # go back to header section\n",
-    "        handle.seek(position)\n",
-    "\n",
-    "        # now read csv file\n",
-    "        reader = csv.reader(handle, delimiter=delimiter)\n",
-    "\n",
-    "        # get header\n",
-    "        header = next(reader)\n",
-    "\n",
-    "        # sanitize column names\n",
-    "        header = [sanitize(column) for column in header]\n",
-    "        \n",
-    "        # ok try to get n of samples and snps\n",
-    "        n_samples = search_n_samples(skipped)\n",
-    "        n_snps = search_n_snp(skipped)\n",
-    "        \n",
-    "        # add data to header\n",
-    "        header.append(\"n_samples\")\n",
-    "        header.append(\"n_snps\")\n",
-    "\n",
-    "        # find duplicated items\n",
-    "        to_remove = sorted(find_duplicates(header), reverse=True)\n",
-    "\n",
-    "        # delete columns from header\n",
-    "        for index in to_remove:\n",
-    "            del header[index]\n",
-    "\n",
-    "        # define a namedtuple istance\n",
-    "        Record = collections.namedtuple(\"Record\", header)\n",
-    "\n",
-    "        # get record and delete duplicate column\n",
-    "        for record in reader:\n",
-    "            # add records to data\n",
-    "            record.append(n_samples)\n",
-    "            record.append(n_snps)\n",
-    "            \n",
-    "            for index in to_remove:\n",
-    "                del record[index]\n",
-    "\n",
-    "            record = Record._make(record)\n",
-    "            yield record"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "21966477-b4c6-441c-b5ff-5c6b0eac5004",
    "metadata": {},
    "source": [
@@ -162,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d311107e-367a-4396-807e-7d2020ca4393",
    "metadata": {},
    "outputs": [],
@@ -180,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cbb1f1bf-fc73-4fda-bae9-7193e0e3025d",
    "metadata": {},
    "outputs": [
@@ -211,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2b567098-58ca-4e53-9729-2974b43607da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e0439ccbf264d688349ef75ac29e55e",
+       "model_id": "b2c0918be5f44899af3f988ad0ba83a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -264,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "47692ac8-c718-4b9b-a538-3b980371509a",
    "metadata": {},
    "outputs": [
@@ -285,7 +172,7 @@
        "96"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ceadf7e2-fca9-4750-90a2-b0f0de5e7bd8",
    "metadata": {},
    "outputs": [
@@ -477,7 +364,7 @@
        "104  Placa_Junio_recommended.txt  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "dfeee955-185e-4719-b1b0-28b0c7d50d7a",
    "metadata": {},
    "outputs": [
@@ -521,7 +408,7 @@
        " '20220323192']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a05b3684-ed72-4c12-a025-92dab84245ab",
    "metadata": {},
    "outputs": [],
@@ -564,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d06611c7-f5a4-4f86-b529-5e7254044282",
    "metadata": {},
    "outputs": [],
@@ -582,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0499cd19-a74f-4492-ae0c-970f3acd617a",
    "metadata": {},
    "outputs": [
@@ -759,7 +646,7 @@
        "104  Placa_Junio_recommended.txt  op1020_20220323192_cel_call_code  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,12 +666,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "42e0d663-219b-4ece-a756-b6358d8bb792",
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfile = \"placa_junio_metadata.xlsx\"\n",
+    "outfile = str(get_interim_dir() / \"placa_junio_metadata.xlsx\")\n",
     "placa_junio_metadata.to_excel(outfile, index=False)"
    ]
   },
@@ -807,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "438aa3b1-506c-41e3-be97-75c785f99730",
    "metadata": {},
    "outputs": [],
@@ -825,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "8579ed11-22a4-48ff-a8ae-bba26bcad45e",
    "metadata": {},
    "outputs": [
@@ -856,14 +743,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "98d8a47d-4f54-46f2-adb8-e4bd8163c990",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "735cc87bb0ec461fab963ab7f86aab58",
+       "model_id": "d69fb2facc954ff9bb0863331190c0ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -909,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "11687033-67ad-4cc5-a577-2f044565af71",
    "metadata": {},
    "outputs": [
@@ -930,7 +817,7 @@
        "96"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "7f762934-fb87-47e6-a86b-af5c98efad1a",
    "metadata": {},
    "outputs": [
@@ -1062,7 +949,7 @@
        "45      None  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "15996f31-b630-45a7-8c4d-62a598e3988d",
    "metadata": {},
    "outputs": [],
@@ -1101,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "1ae07916-19d0-4a96-a9fc-baaf5063b8af",
    "metadata": {},
    "outputs": [],
@@ -1122,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "a3509e5f-ae16-4332-a259-ff7286cd36f2",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "fe044f91-a84a-4947-91d6-955d047c7549",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1132,7 @@
        "45  op833_20220323005_cel_call_code  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,12 +1152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "380cde8f-1389-4c8c-acaa-21264754d3a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfile = \"inia_abril_metadata.xlsx\"\n",
+    "outfile = str(get_interim_dir() / \"inia_abril_metadata.xlsx\")\n",
     "inia_abril_metadata.to_excel(outfile, index=False)"
    ]
   },
@@ -1285,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "f2051eb7-a0c9-4d92-bbc0-fd13e6716c4c",
    "metadata": {},
    "outputs": [],
@@ -1303,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "39ae639d-2f10-47f5-a66a-8192b7be541a",
    "metadata": {},
    "outputs": [
@@ -1334,14 +1221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "1cbdaf35-c9df-450b-9db8-51d8ba2a09a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11d17c104d9d4a908544bf7d0ddbb4f5",
+       "model_id": "70a177e490ec45d9914af7513587a2d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1387,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "6ad3f283-5d8c-4a3d-a582-3a42779280ef",
    "metadata": {},
    "outputs": [
@@ -1408,7 +1295,7 @@
        "380"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "e2fe5ec7-77ff-438b-8843-7c24e6c6f85e",
    "metadata": {},
    "outputs": [
@@ -1540,7 +1427,7 @@
        "4      None  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "905c31e8-8b55-43db-9386-803f9597c5df",
    "metadata": {},
    "outputs": [],
@@ -1579,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "2a38a91b-a372-4a24-a09e-40481a109e26",
    "metadata": {},
    "outputs": [],
@@ -1600,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "353590fb-69e4-4407-8c60-b43c260294f9",
    "metadata": {},
    "outputs": [],
@@ -1618,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "a92d1c64-5221-4841-922d-efb960df3042",
    "metadata": {},
    "outputs": [
@@ -1723,7 +1610,7 @@
        "4  op262_20210824032_cel_call_code  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1743,12 +1630,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "3be9e5f4-84c4-44d2-acae-040f9f0800b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "outfile = \"placas1_4_metadata.xlsx\"\n",
+    "outfile = str(get_interim_dir() / \"placas1_4_metadata.xlsx\")\n",
     "placas1_4_metadata.to_excel(outfile, index=False)"
    ]
   },
