--- a/notebooks/exploratory/0.10.1-bunop-reverse_geocoding-ovine_SNP50.ipynb
+++ b/notebooks/exploratory/0.10.1-bunop-reverse_geocoding-ovine_SNP50.ipynb
@@ -17,12 +17,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pycountry\n",
     "\n",
     "from geopy.geocoders import Nominatim\n",
     "from geopy.extra.rate_limiter import RateLimiter\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
+    "from src.features.utils import countries\n",
     "from src.features.smarterdb import global_connection, Dataset"
    ]
   },
@@ -216,7 +216,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8df7ad85ccf44cd99f825483c245887",
+       "model_id": "c2cdae511e6b4e5dabf5f3a432398697",
        "version_major": 2,
        "version_minor": 0
       },
@@ -235,7 +235,7 @@
     "    data = rgeocode(coordinate, language=\"English\")\n",
     "    if data:\n",
     "        country_code = data.raw['address']['country_code']\n",
-    "        return pycountry.countries.get(alpha_2=country_code).name\n",
+    "        return countries.get(alpha_2=country_code).name\n",
     "    else:\n",
     "        return data\n",
     "infos[\"country\"] = infos[\"coordinates\"].progress_apply(get_country)"
@@ -569,7 +569,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -583,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
